--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
   "dependencies": {
     "@ts-rest/core": "^3.52.1",
     "@ts-rest/express": "^3.52.1",
+    "@types/bull": "^3.15.9",
+    "bull": "^4.16.5",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.44.5",
